responsive.less: Prevent body from scrolling on mobile devices

--- a/public/css/icinga/responsive.less
+++ b/public/css/icinga/responsive.less
@@ -37,6 +37,14 @@
   html {
     font-family: 'minimal-layout';
   }
+
+  body {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
 
 #layout.compact-layout {
